# tftp-rs

./: .gitignore  Cargo.toml  README.md
examples/: client.rs  server.rs
src/: client.rs  config.rs  conn.rs  lib.rs  proto.rs  read.rs  server.rs  testing.rs  udp_stream.rs  util.rs
src/client/: mod.rs  read.rs  util.rs  write.rs
