[package]
name = "tftp-rs"
version = "0.2.0"
edition = "2018"
authors = ["Tom Dyas <tom@shoalsoftware.com>"]

[dependencies]
ascii = "0.9.2"
async-trait = "0.1.9"
bytes = "0.4.12"
futures-preview = { version = "=0.3.0-alpha.18", features = ["async-await", "nightly"] }
pin-utils = "0.1.0-alpha.4"
tokio = "=0.2.0-alpha.4"
